--- a/src/startup/app.component.html
+++ b/src/startup/app.component.html
@@ -1,14 +1,20 @@
-<app-header (onMenuClick)="sidenav.toggle()"></app-header>
-<mat-sidenav-container class="example-container">
-  <mat-sidenav #sidenav mode="push" class="sideNavTheme">
-    <div class="navItems" *ngFor="let route of routes">
-      <nav>
-        <a mat-button routerLink="{{route.link}}">{{route.name}}</a>
-      </nav>
-    </div>
-  </mat-sidenav>
+<div *ngIf="configLoaded">
+  <app-header (onMenuClick)="sidenav.toggle()"></app-header>
+  <mat-sidenav-container class="example-container">
+    <mat-sidenav #sidenav mode="push" class="sideNavTheme">
+      <div class="navItems" *ngFor="let route of routes">
+        <nav>
+          <a mat-button routerLink="{{route.link}}">{{route.name}}</a>
+        </nav>
+      </div>
+    </mat-sidenav>
 
-  <div class="example-sidenav-content" class="contentTheme">
-    <router-outlet></router-outlet>
-  </div>
-</mat-sidenav-container>
+    <div class="example-sidenav-content" class="contentTheme">
+      <router-outlet></router-outlet>
+    </div>
+  </mat-sidenav-container>
+</div>
+<div *ngIf="!configLoaded" class="loading-bar">
+  <h3>Loading Configurations, Please wait...</h3>
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</div>
