--- a/src/components/dashboard/dashboard.component.html
+++ b/src/components/dashboard/dashboard.component.html
@@ -1,17 +1,36 @@
-<app-toolbar [componentToolbar]="'dashboard'" (onAddTowerClick)="onAddTowerClick($event)"></app-toolbar>
-<mat-tab-group [(selectedIndex)]="selectedTabIndex">
-  <mat-tab label="Simple Ag-Grid">
-    <div style="height:800px" *ngIf="selectedTabIndex == 0">
-      <div class="tower-grid">
-        <app-ag-grid-base [rowData]="bxViewrowData" [columnDefs]="bxViewcolumnDefs"></app-ag-grid-base>
-      </div>
-    </div>
-  </mat-tab>
-  <mat-tab label="Ag-Grid Cell Renderer Example">
-    <div style="height:800px" *ngIf="selectedTabIndex == 1">
-      <div class="tower-grid">
-        <app-ag-grid-base [rowData]="workFlowViewrowData" [columnDefs]="workFlowViewcolumnDefs"></app-ag-grid-base>
-      </div>
-    </div>
-  </mat-tab>
-</mat-tab-group>
+<ng-template #tipContent>
+
+  <div class="container">
+    <table class="table table-dark table-hover table-striped">
+      <thead class="thead-light">
+        <tr>
+          <th>Name</th>
+          <th>Age</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Steve Smith</td>
+          <td>28</td>
+        </tr>
+        <tr>
+          <td>David Warner</td>
+          <td>29</td>
+        </tr>
+        <tr>
+          <td>Joe Root</td>
+          <td>27</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <p>
+    Tooltips can contain any arbitrary HTML, Angular bindings and even directives! Simply enclose desired content in a
+    <code>&lt;ng-template&gt;</code> element.
+  </p>
+
+</ng-template>
+<button type="button" class="btn btn-outline-secondary" [ngbTooltip]="tipContent">
+  I've got markup and bindings in my tooltip!
+</button>
