display version number

--- a/src/startup/app.component.html
+++ b/src/startup/app.component.html
@@ -1,3 +1,4 @@
+<span>{{version}}</span>
 <app-header (onMenuClick)="sidenav.toggle()"></app-header>
 <mat-sidenav-container class="example-container">
   <mat-sidenav #sidenav mode="push" class="sideNavTheme">
