--- a/src/components/base/ag-grid-base/ag-grid-base.component.html
+++ b/src/components/base/ag-grid-base/ag-grid-base.component.html
@@ -1,6 +1,37 @@
-<ag-grid-angular style="width: 100%; height: 100%;" [gridOptions]="gridOptions" [rowHeight]="37" [headerHeight]="38" class="ag-theme-material"
-  [rowData]="rowData" [columnDefs]="columnDefs" (gridReady)="onGridReady($event)" [rowSelection]="rowSelection" [enableColResize]="true"
-  [components]="components" (selectionChanged)="onSelectionChanged($event)" [gridOptions]="gridOptions" [frameworkComponents]="frameworkComponents"
-  (selectEditorValueChange)="selectEditorValueChange($event)" [headerHeight]="headerHeight" [pagination]="pagination" [paginationAutoPageSize]="paginationAutoPageSize"
-  [editType]="editType">
-</ag-grid-angular>
+<button mat-button *ngIf="showExportButton" (click)="onExportClick()">Export</button>
+<mat-form-field *ngIf="showGlobalSearch" class="mT10">
+    <input matInput type="text" placeholder="Search..." [(ngModel)]="globalFilter" (input)="onFilterTextBoxChanged($event)" />
+</mat-form-field>
+<ag-grid-angular
+    style="width: 100%; height: 100%;"
+    [gridOptions]="gridOptions"
+    [rowHeight]="34"
+    [headerHeight]="45"
+    class="ag-theme-material"
+    [columnDefs]="columnDefs"
+    [rowData]="rowData"
+    (gridReady)="onGridReady($event)"
+    [suppressRowClickSelection]="suppressRowClickSelection"
+    [rowSelection]="rowSelection"
+    [components]="components"
+    (selectionChanged)="onSelectionChanged($event)"
+    [gridOptions]="gridOptions"
+    [frameworkComponents]="frameworkComponents"
+    (selectEditorValueChange)="selectEditorValueChange($event)"
+    [headerHeight]="headerHeight"
+    [pagination]="pagination"
+    [paginationAutoPageSize]="paginationAutoPageSize"
+    [editType]="editType"
+    [rowDeselection]="rowDeselection"
+    (modelUpdated)="onGridModelUpdated($event)"
+    [loadingOverlayComponent]="'GridOverlayComponent'"
+    [loadingOverlayComponentParams]="gridOverlayComponentParams"
+    [getContextMenuItems]="getContextMenuItems"
+    [rowModelType]="rowModelType"
+    [enableServerSideSorting]="enableServerSideSorting"
+    [suppressRowClickSelection]="suppressRowClickSelection"
+    (newColumnsLoaded)="onNewColumnsLoaded($event)"
+    [pinnedBottomRowData]="pinnedBottomRowData"
+    [getRowStyle]="getRowStyle"
+    (rowDataChanged)="onRowDataChanged($event)"
+></ag-grid-angular>
