lazy loaded feature module

--- a/src/modules/feature/dashboard/dashboard.component.html
+++ b/src/modules/feature/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-toolbar [componentToolbar]="'dashboard'" (onAddTowerClick)="onAddTowerClick($event)"></app-toolbar>
+<!-- <app-toolbar [componentToolbar]="'dashboard'" (onAddTowerClick)="onAddTowerClick($event)"></app-toolbar> -->
 <mat-tab-group [(selectedIndex)]="selectedTabIndex">
   <mat-tab label="Simple Ag-Grid">
     <div style="height:800px" *ngIf="selectedTabIndex == 0">
